# CranChess

./: .gitignore  README.md  engine_settings.json  index.html  manifest.json  package-lock.json  package.json  state.json  vite.config.ts
cran_games/Tic-Tac-Toe/: manifest.json
cran_games/Tic-Tac-Toe/logic/: rules.js
cran_games/go/: manifest.json
cran_games/go/logic/: rules.js
cran_games/life/: manifest.json
cran_games/life/logic/: rules.js
cran_games/othello/: manifest.json
cran_games/othello/logic/: rules.js
cran_games/standard-chess@1.0.0/logic/: rules.js
docs/: DEVELOPMENT.md
scripts/: create-game.js
src/: asset-manager.ts  main.ts  network.ts  renderer.ts  tween.ts  ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  mod_loader.rs  raycast.rs  sandbox.rs  state_manager.rs
