[package]
name = "cranchess"
version = "1.0.0"
description = "CranChess Core Engine"
authors = ["CranChess Creator"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
boa_engine = "0.17.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
